ic-canister/ic-canister-macros/tests/export_candid/not_expended/invalid_attr_arguments.rs
fn main() {}

#[ic_canister_macros::export_candid(attribute)]
fn did() -> String {
    panic!()
}
